--- a/index.html
+++ b/index.html
@@ -8,66 +8,70 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <svg xmlns="http://www.w3.org/2000/svg" width="120" height="60" viewBox="0 0 651.6 320.51">
-                <path fill="#FF6F0F" d="M93.703 118.255C41.959 118.255 0 159.28 0 211.075 0 282.64 93.967 320.61 93.703 320.509c-.254.102 93.702-37.868 93.702-109.434 0-51.764-41.959-92.82-93.702-92.82zm0 130.404a35.484 35.484 0 1 1 35.504-35.483 35.463 35.463 0 0 1-35.504 35.544z"/>
-                <path fill="#00A05B" d="M114.794 0C92.93 0 77.696 15.286 75.31 33.332c-29.16-8.049-51.997 14.108-51.997 38.467 0 18.646 12.82 33.718 29.901 38.61 13.784 3.938 38.6 1.005 38.6 1.005-.132-6.029 5.42-12.647 13.986-18.676 24.36-17.122 43.4-25.201 46.334-48.556C155.21 19.742 137.073 0 114.794 0Z"/>
-                <path fill="#FF6F0F" d="M373.38 150.521c-19.793 6.222-54.048 9.53-86.233 9.53v-39.157h66.47v-29.14H251.492v99.285c55.854 0 104.614-6.73 125.197-13.103l-3.309-27.405zm46.922-70.389h-35.595v114.135h35.595v-35.778h28.724v-31.14h-28.724zm-66.106 113.87c-37.716 0-65.364 20.777-65.364 51.277s27.678 51.287 65.364 51.287c37.686 0 65.365-20.797 65.365-51.287 0-30.48-27.658-51.276-65.365-51.276zm0 74.013c-17 0-29.749-8.15-29.749-22.787 0-14.625 12.749-22.765 29.74-22.765 17 0 29.758 8.15 29.758 22.765 0 14.616-12.738 22.787-29.749 22.787zm164.153-58.88H481.95v77.22h144.645v-30.56H518.349Zm103.73-119.482H480.307v30.56h106.045c0 7.593.365 25.65-3.116 46.162H453.218v31.606H650.6v-31.565h-35.169c4.72-25.913 6.06-46.121 6.648-76.763Z"/>
-            </svg>
-        </div>
-        <nav>
-            <a href="#">중고거래</a>
-            <a href="#">부동산</a>
-            <a href="#">중고차</a>
-            <a href="#" class="with-submenu">알바</a>
-            <div class="sub-menu">
-                <a href="#">알바 검색</a>
-                <a href="#">당근알바 소개</a>
-                <a href="#">기업형 서비스</a>
-                <a href="#">신뢰와 안전</a>
+        <div class="header-top">
+            <div class="logo">
+                <svg xmlns="http://www.w3.org/2000/svg" width="120" height="60" viewBox="0 0 651.6 320.51">
+                    <path fill="#FF6F0F" d="M93.703 118.255C41.959 118.255 0 159.28 0 211.075 0 282.64 93.967 320.61 93.703 320.509c-.254.102 93.702-37.868 93.702-109.434 0-51.764-41.959-92.82-93.702-92.82zm0 130.404a35.484 35.484 0 1 1 35.504-35.483 35.463 35.463 0 0 1-35.504 35.544z"/>
+                    <path fill="#00A05B" d="M114.794 0C92.93 0 77.696 15.286 75.31 33.332c-29.16-8.049-51.997 14.108-51.997 38.467 0 18.646 12.82 33.718 29.901 38.61 13.784 3.938 38.6 1.005 38.6 1.005-.132-6.029 5.42-12.647 13.986-18.676 24.36-17.122 43.4-25.201 46.334-48.556C155.21 19.742 137.073 0 114.794 0Z"/>
+                    <path fill="#FF6F0F" d="M373.38 150.521c-19.793 6.222-54.048 9.53-86.233 9.53v-39.157h66.47v-29.14H251.492v99.285c55.854 0 104.614-6.73 125.197-13.103l-3.309-27.405zm46.922-70.389h-35.595v114.135h35.595v-35.778h28.724v-31.14h-28.724zm-66.106 113.87c-37.716 0-65.364 20.777-65.364 51.277s27.678 51.287 65.364 51.287c37.686 0 65.365-20.797 65.365-51.287 0-30.48-27.658-51.276-65.365-51.276zm0 74.013c-17 0-29.749-8.15-29.749-22.787 0-14.625 12.749-22.765 29.74-22.765 17 0 29.758 8.15 29.758 22.765 0 14.616-12.738 22.787-29.749 22.787zm164.153-58.88H481.95v77.22h144.645v-30.56H518.349Zm103.73-119.482H480.307v30.56h106.045c0 7.593.365 25.65-3.116 46.162H453.218v31.606H650.6v-31.565h-35.169c4.72-25.913 6.06-46.121 6.648-76.763Z"/>
+                </svg>
             </div>
-            <a href="#">동네업체</a>
-            <a href="#">동네생활</a>
-            <a href="#">모임</a>
-        </nav>
-        <button class="app-download-button">
-            <a href="#">앱 다운로드</a>
-        </button>
-    </header>
-    <div class="search-container">
-        <section class="location">
-            <a href="#">유성구</a>
-            <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/location_icon.png?raw=true" alt-="location-icon">
-        </section>
-    </div>
-    <section class="search-others">
-        <div class="search-bar">
-            <div class="search-bar-button">
+            <nav>
                 <a href="#">중고거래</a>
-            </div>
-            <div class="search-bar-input">
-                <input type="text" placeholder="검색어를 입력해주세요">
-            </div>
-            <div class="search-icon">
-                <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/search_icon.png?raw=true" alt="search icon">
-            </div>
+                <a href="#">부동산</a>
+                <a href="#">중고차</a>
+                <a href="#" class="with-submenu">알바</a>
+                <div class="sub-menu">
+                    <a href="#">알바 검색</a>
+                    <a href="#">당근알바 소개</a>
+                    <a href="#">기업형 서비스</a>
+                    <a href="#">신뢰와 안전</a>
+                </div>
+                <a href="#">동네업체</a>
+                <a href="#">동네생활</a>
+                <a href="#">모임</a>
+            </nav>
+            <button class="app-download-button">
+                <a href="#">앱 다운로드</a>
+            </button>
         </div>
-    </section>
-    <section class="popular-searches">
-        <nav>
-            인기 검색어
-            <a href="#">아이폰</a>
-            <a href="#">의자</a>
-            <a href="#">자전거</a>
-            <a href="#">컴퓨터</a>
-            <a href="#">책상</a>
-            <a href="#">소파</a>
-            <a href="#">원피스</a>
-            <a href="#">전기자전거</a>
-            <a href="#">식탁</a>
-            <a href="#">모니터</a>
-        </nav>
-    </section>
+        <div class="header-bottom">
+            <div class="search-container">
+                <section class="location">
+                    <a href="#">유성구</a>
+                    <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/location_icon.png?raw=true" alt-="location-icon">
+                </section>
+            </div>
+            <section class="search-others">
+                <div class="search-bar">
+                    <div class="search-bar-button">
+                        <a href="#">중고거래</a>
+                    </div>
+                    <div class="search-bar-input">
+                        <input type="text" placeholder="검색어를 입력해주세요">
+                    </div>
+                    <div class="search-icon">
+                        <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/search_icon.png?raw=true" alt="search icon">
+                    </div>
+                </div>
+            </section>
+            <section class="popular-searches">
+                <nav>
+                    인기 검색어
+                    <a href="#">아이폰</a>
+                    <a href="#">의자</a>
+                    <a href="#">자전거</a>
+                    <a href="#">컴퓨터</a>
+                    <a href="#">책상</a>
+                    <a href="#">소파</a>
+                    <a href="#">원피스</a>
+                    <a href="#">전기자전거</a>
+                    <a href="#">식탁</a>
+                    <a href="#">모니터</a>
+                </nav>
+            </section>
+        </div>
+    </header>
     <div class="main-container">
         <section class="banner">
             <div class="banner-text">
